--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "csv-parse": "^5.0.3",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -48,6 +50,7 @@
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
