--- a/package.json
+++ b/package.json
@@ -55,11 +55,12 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-import-helpers": "^1.2.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "jest": "^27.0.6",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "react-hook-form": "^7.22.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
