--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,12 @@
     "import/prefer-default-export": 0,
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "varsIgnorePattern": "^_"
+      }
+    ],
     "import-helpers/order-imports": [
       "warn",
       {
