--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@api/*": ["src/api/*"],
+      "@config/*": ["src/config/*"],
+      "@services/*": ["src/services/*"],
+      "@decorators/*": ["src/_common/decorators/*"],
+      "@interceptors/*": ["src/_common/interceptors/*"]
+    }
   }
 }
