ormconfig: corrigidos diretórios

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,9 @@
   "username": "root",
   "password": "",
   "database": "swriter",
-  "entities": ["dist/**/*.entity.js"],
+  "entities": ["dist/api/**/entities/*.entity.js"],
   "subscribers": ["dist/**/*.subscriber.js"],
-  "migrations": ["dist/src/_migrations/*.js"],
+  "migrations": ["dist/_migrations/*.js"],
   "cli": {
     "migrationsDir": "src/_migrations"
   },
