--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "csv-parse": "^5.0.3",
+    "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
